added preload card img

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -92,3 +92,11 @@ app-player-mobile {
     max-width: 100%;
     display: flex;
 }
+
+// .preloadImage {
+//     opacity: 0;
+//     z-index: -999;
+//     height: 0;
+//     width: 0;
+//     display: none;
+// }
