--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,11 +1,14 @@
 <app-player (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index;" class="player-position"
-    [playerActive]="i == game.currentPlayer" [image]="game.player_images[i]" [ngStyle]="{'top.px': 50 + (i * 70)}" [name]="player"></app-player>
+    [playerActive]="i == game.currentPlayer" [image]="game.player_images[i]" [ngStyle]="{'top.px': 50 + (i * 70)}"
+    [name]="player"></app-player>
 
-    <div *ngIf="gameOver" >
-        <img class="game-over" src="./assets/img/gameover.jpg" >
-    </div>
+<div *ngIf="gameOver">
+    <img class="game-over" src="./assets/img/gameover.jpg">
+</div>
 
-<div *ngIf="!gameOver" class="field" >
+<!-- <img class="preloadImage" src="/assets/img/cards/{{ game.stack[game.stack.length -1] }}.png"> -->
+
+<div *ngIf="!gameOver" class="field">
     <div class="card-stack">
         <!-- cardstack -->
         <img *ngFor="let card of [0, 1, 2, 3, 4]; let i = index;" [ngStyle]="{'right.px': i * 5}"
@@ -14,6 +17,7 @@
 
         <!-- Stack for played cards -->
         <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}.png" alt="">
+
 
         <!-- Current card animation -->
         <img (click)="takeCard()" *ngIf="game.pickCardAnimation" class="pick-card" style="right: 25px"
