improved responsive design

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,6 +1,12 @@
 <div class="start-screen">
-    <img src="assets/img/start.jpg">
+    <img class="start-img" src="assets/img/start.jpg">
     <div class="start-label-container">
+        <div>
+            <h1> Simple card game to exercise a language in a group.</h1>
+            <p class="hide-description"> Add new players and click on the card pile to start the game. </p>
+            <p class="italic hide-description"> If you want, you can start without adding players.</p>
+            <p class="italic hide-description"> The game ends when the card pile is empty.</p>
+        </div>
         <img (click)="newGame()" src="assets/img/start-button.png">
     </div>
 </div>
