--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -9,10 +9,10 @@
 
 <div *ngIf="gameOver">
     <img class="game-over" src="./assets/img/gameover.jpg">
-    <img class="replay" routerLink="/" s0rc="/assets/img/replay.png" title="Play Again">
+    <img class="replay" routerLink="/" src="/assets/img/replay.png" title="Play Again">
 </div>
 
-<img class="preloadImage" src="/assets/img/cards/{{ game.stack[game.stack.length -1] }}.svg">
+<img *ngIf="!stackOver" class="preloadImage" src="/assets/img/cards/{{ game.stack[game.stack.length -1] }}.svg">
 
 <div *ngIf="!gameOver" class="field">
     <div class="card-stack">
@@ -36,3 +36,4 @@
 <button *ngIf="!gameOver" (click)="openDialog()" mat-fab color="primary" class="button-add">
     <mat-icon>add</mat-icon>
 </button>
+
