--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,3 +1,18 @@
+/* @media(max-width:720px) {
+    body {
+        --translate-y: -220px
+        --translate-x: 54px
+
+    }
+}
+
+@media(min-width:720px) {
+    body {
+        --translate-y: -180px
+        --translate-x: 140px
+    }
+}
+ */
 .field {
     height: 100vh;
     width: 100vw;
@@ -30,7 +45,20 @@
 
 .pick-card {
     animation: pick-card-animation 1s ease-in-out;
-    transform: scale(1.3) translateX(140px) translateY(-180PX) rotate(-10deg);
+    transform: scale(var(--scale-card)) translateX(var(--translate-x)) translateY(var(--translate-y)) rotate(-10deg);
+
+    @media(max-width:720px) {
+        animation: pick-card-animation-mobile 1s ease-in-out;
+        --translate-y: -200px;
+        --translate-x: 54px;
+        --scale-card: 1.05;
+    }
+
+    @media(min-width:720px) {
+        --translate-y: -180px;
+        --translate-x: 140px;
+        --scale-card: 1.3;
+    }
 }
 
 @keyframes pick-card-animation {
@@ -47,14 +75,40 @@
     }
 
     100% {
-        transform: scale(1.3) translateX(140px) translateY(-180PX) rotate(-10deg);
+        transform: scale(var(--scale-card)) translateX(var(--translate-x)) translateY(var(--translate-y)) rotate(-10deg);
+    }
+
+}
+
+@keyframes pick-card-animation-mobile {
+    0% {
+        transform: scale(1);
+    }
+
+
+    100% {
+        transform: scale(var(--scale-card)) translateX(var(--translate-x)) translateY(var(--translate-y)) rotate(-10deg);
     }
 
 }
 
 .played-card {
-    transform: scale(1.3) translateX(140px) translateY(-180PX) rotate(-10deg);
+    transform: scale(var(--scale-card)) translateX(var(--translate-x)) translateY(var(--translate-y)) rotate(-10deg);
     right: 25px;
+
+    @media(max-width:720px) {
+        --translate-y: -200px;
+        --translate-x: 54px;
+        --scale-card: 1.05;
+    }
+
+    @media(min-width:720px) {
+        --translate-y: -180px;
+        --translate-x: 140px;
+        --scale-card: 1.3;
+    }
+
+
 }
 
 .player-position {
@@ -67,6 +121,11 @@
     position: absolute;
     right: 32px;
     bottom: 32px;
+
+    @media (max-width: 720px) {
+        right: 25px;
+        bottom: 170px;
+    }
 }
 
 .pin-bottom {
@@ -76,10 +135,11 @@
     left: 100px;
 
     @media (max-width: 720px) {
-        height: 150px;
         left: 0;
         bottom: 0;
         right: 0;
+        max-height: 130px;
+        overflow-y: auto;
     }
 }
 
@@ -99,6 +159,7 @@ app-player-mobile {
     object-fit: contain;
     max-width: 100%;
     display: flex;
+    background-image: url("/assets/img/wood.jpg");
 }
 
 .preloadImage {
@@ -116,6 +177,31 @@ app-player-mobile {
     left: 42%;
     z-index: 999;
     cursor: pointer;
+
+    &:hover {
+        filter: brightness(0) saturate(100%) invert(58%) sepia(99%) saturate(401%) hue-rotate(340deg) brightness(100%) contrast(103%);
+    }
+
+    @media(max-width:720px) and (min-width: 540px) {
+        filter: brightness(0) saturate(100%) invert(82%) sepia(31%) saturate(1796%) hue-rotate(10deg) brightness(102%) contrast(105%);
+        width: 78px;
+        top: 61%;
+        left: 40%;
+    }
+
+    @media(max-width:540px) {
+        filter: brightness(0) saturate(100%) invert(82%) sepia(31%) saturate(1796%) hue-rotate(10deg) brightness(102%) contrast(105%);
+        width: 97px;
+        top: 78%;
+        left: 36%;
+    }
+
+    @media(min-width:1500px) {
+        width: 60px;
+        top: 51.4%;
+        left: 44%;
+    }
+
 }
 
 .scroll-container {
