--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -1,36 +1,83 @@
 .start-screen {
-    background-color: #404040;
+    background-image: url("/assets/img/wood.jpg");
     width: 100vw;
     max-width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    img {
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
-    }
-
 }
 
+.start-img {
+    width: 100vw;
+    height: 100vh;
+    object-fit: contain;
+}
 
 .start-label-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     position: absolute;
     left: 0;
     right: 0;
-    bottom: calc( 30px + 4vw );
+    bottom: 0;
+
+    h1 {
+        // white-space: nowrap;
+        max-width: 60vw;
+        text-align: center;
+        font-family: 'Cambay', sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        margin-block-end: 0px;
+        margin-bottom: 50px;
+
+        @media (max-width: 560px) {
+            font-size: 20px;
+            margin-bottom: 13vh;
+        }
+        
+        @media (min-width: 560px) and (max-width: 800px) {
+            font-size: 18px;
+        }
+
+        @media (min-width: 1300px) {
+            margin-bottom: 5vw;
+        }
+
+    }
+
+
+    div {
+        max-width: 60vw;
+        text-align: center;
+        margin-bottom: 8vh;
+        font-family: 'Cambay', sans-serif;
+        font-size: 22px;
+
+        
+        @media (max-width: 560px) {
+            font-size: 14px;
+            margin-bottom: 12vh;
+        }
+
+        @media (min-width: 560px) and (max-width: 800px) {
+            font-size: 15px;
+            margin-bottom: 9vh;
+        }
+    }
+
+    .italic {
+        font-style: italic;
+        font-size: smaller;
+    }
 
     img {
-        width: calc( 250px + 5vw );
-        height: auto;
+        width: calc(100px + 16vw);
+        margin-bottom: calc(16px + 8vw);
 
-        @media (max-width: 960px) {
-            width: 300px;
-        }
 
         &:hover {
             filter: brightness(1.75);
