added share button

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -37,3 +37,7 @@
     <mat-icon>add</mat-icon>
 </button>
 
+<button *ngIf="!gameOver" mat-fab color="primary" (click)="openShareDialog()" class="button-share" >
+    <mat-icon>share</mat-icon>
+  </button>
+
