--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -128,6 +128,17 @@
     }
 }
 
+.button-share {
+    position: absolute;
+    right: 32px;
+    bottom: 105px;
+
+    @media (max-width: 720px) {
+        right: 25px;
+        bottom: 243px;
+    }
+}
+
 .pin-bottom {
     position: absolute;
     bottom: 32px;
