--- a/src/app/dialog-share/dialog-share.component.html
+++ b/src/app/dialog-share/dialog-share.component.html
@@ -1,13 +1,12 @@
 <h1 mat-dialog-title>Play with friends!</h1>
 <div mat-dialog-content>
-    <p>Copy the link below and share it with your friends</p>
-    <div class="link-container">
-        <span>{{ path }}</span>
-        <button 
-           (click)="copyText(this.path)"
-        matTooltip="Click to copy"
-        matTooltipHideDelay="100"> <mat-icon>content_copy</mat-icon></button>
-    </div> <!-- (click)="copyLink()" -->
+  <p>Copy the link below and share it with your friends</p>
+  <div class="link-container">
+    <span>{{ path }}</span>
+    <button (click)="copyText(this.path)" matTooltip="Click to copy" matTooltipHideDelay="220">
+      <mat-icon>content_copy</mat-icon>
+    </button>
+  </div>
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close>Close</button>
