--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,23 +1,9 @@
-/* @media(max-width:720px) {
-    body {
-        --translate-y: -220px
-        --translate-x: 54px
 
-    }
-}
-
-@media(min-width:720px) {
-    body {
-        --translate-y: -180px
-        --translate-x: 140px
-    }
-}
- */
 .field {
     height: 100vh;
     width: 100vw;
     max-width: 100%;
-    background-image: url("/assets/img/wood.jpg");
+    background-image: url("~src/assets/img/wood.jpg");
     display: flex;
     justify-content: center;
     align-items: center;
@@ -170,7 +156,7 @@ app-player-mobile {
     object-fit: contain;
     max-width: 100%;
     display: flex;
-    background-image: url("/assets/img/wood.jpg");
+    background-image: url("~src/assets/img/wood.jpg");
 }
 
 .preloadImage {
