--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -1,5 +1,7 @@
 .start-screen {
     background-image: url("~src/assets/img/wood.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100vw;
     max-width: 100%;
     height: 100vh;
